[gd_scene load_steps=4 format=3 uid="uid://dwgevcomgb0d2"]

[ext_resource type="Script" path="res://prog_52a.gd" id="1_g3b63"]
[ext_resource type="LabelSettings" uid="uid://bxl363dyp22f0" path="res://biglabel38.tres" id="2_13s02"]
[ext_resource type="Theme" uid="uid://b0cs0qqc6nrp7" path="res://Big_font.tres" id="3_yt2f0"]

[node name="prog52a" type="Node2D"]
script = ExtResource("1_g3b63")

[node name="Label" type="Label" parent="."]
offset_left = 86.0
offset_top = 36.0
offset_right = 418.0
offset_bottom = 92.0
text = "length:"
label_settings = ExtResource("2_13s02")

[node name="Label2" type="Label" parent="."]
offset_left = 95.0
offset_top = 92.0
offset_right = 426.0
offset_bottom = 153.0
text = "width:"
label_settings = ExtResource("2_13s02")

[node name="area" type="Label" parent="."]
offset_left = 88.0
offset_top = 141.0
offset_right = 800.0
offset_bottom = 212.0
text = "Area:"
label_settings = ExtResource("2_13s02")
horizontal_alignment = 1
vertical_alignment = 1

[node name="perim" type="Label" parent="."]
offset_left = 87.0
offset_top = 185.0
offset_right = 799.0
offset_bottom = 256.0
text = "perimeter:"
label_settings = ExtResource("2_13s02")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LElen" type="LineEdit" parent="."]
offset_left = 185.0
offset_top = 38.0
offset_right = 516.0
offset_bottom = 84.0

[node name="LEwid" type="LineEdit" parent="."]
offset_left = 184.0
offset_top = 90.0
offset_right = 515.0
offset_bottom = 136.0

[node name="calcbtn" type="Button" parent="."]
offset_left = 47.0
offset_top = 324.0
offset_right = 243.0
offset_bottom = 412.0
theme = ExtResource("3_yt2f0")
text = "Calculate"

[node name="clearbtn" type="Button" parent="."]
offset_left = 272.0
offset_top = 325.0
offset_right = 468.0
offset_bottom = 413.0
theme = ExtResource("3_yt2f0")
text = "Clear"

[node name="exitbtn" type="Button" parent="."]
offset_left = 509.0
offset_top = 326.0
offset_right = 705.0
offset_bottom = 414.0
theme = ExtResource("3_yt2f0")
text = "Exit"

[connection signal="pressed" from="calcbtn" to="." method="_on_calcbtn_pressed"]
[connection signal="pressed" from="calcbtn" to="." method="_on_button_pressed"]
[connection signal="pressed" from="clearbtn" to="." method="_on_clearbtn_pressed"]
[connection signal="pressed" from="clearbtn" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="exitbtn" to="." method="_on_exitbtn_pressed"]
[connection signal="pressed" from="exitbtn" to="." method="_on_button_3_pressed"]
